--- a/Redis pub-sub/redis/conf/redis.conf
+++ b/Redis pub-sub/redis/conf/redis.conf
@@ -73,7 +73,7 @@
 # JUST COMMENT OUT THE FOLLOWING LINE.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # bind 127.0.0.1 -::1
-bind reids
+bind redis
 
 # Protected mode is a layer of security protection, in order to avoid that
 # Redis instances left open on the internet are accessed and exploited.
